--- a/assets/style.css
+++ b/assets/style.css
@@ -1,31 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap');
 
-body {
+body, html, .features, .navbar {
     background-color: #0b0c0d!important;
 }
 
+.navbar {
+    border-bottom: 2px solid rgba(27, 24, 84, 0.678);
+}
+
+.spypet {
+    background-color: #06080c;
+    /* background-image: url("/assets/waves.png");
+    background-size: cover; */
+    border-top: 2px solid rgba(27, 24, 84, 0.678);
+    border-bottom: 2px solid rgba(27, 24, 84, 0.678);
+}
+
 .header {
-    padding: 10rem 0;
+    height: 900px;
+    padding: 5rem 0;
+    background-color: #060c17;
+    background-image: url("/assets/waves.png");
+    background-size: cover;
+    /* overflow: hidden; */
+    border-bottom: 2px solid rgba(27, 24, 84, 0.678);
 }
 
 .header-text {
     font-weight: bold;
     background: rgb(67,61,251);
-    background: linear-gradient(59deg, rgba(67,61,251,1) 0%, rgba(137,44,218,1) 91%);
+    background: linear-gradient(180deg, rgb(255, 255, 255) 50%, rgb(27, 141, 255) 125%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 
     font-family: 'Climate Crisis', sans-serif;
 
-    font-size: 3rem;
+    font-size: 4rem;
+    letter-spacing: 0.1rem;
+    text-shadow: 0px 5px 20px rgb(64 58 255 / 30%);
+    z-index: 2;
 }
 
-p, h1, h2, h3, h4, h5, h6, a, button {
+p, h1, h2, h3, h4, h5, h6, a, button, .btn {
     font-family: 'Host Grotesk', sans-serif;
+    color: white!important;
 }
 
 .download-btn {
-    letter-spacing: 0.1rem;
+    /* letter-spacing: 0.1rem; */
     background-color: #433dfb!important;
 }
 
@@ -52,90 +74,123 @@ p, h1, h2, h3, h4, h5, h6, a, button {
     width: 50%;
 }
 
+#console-img-container {
+    position: relative;
+    display: inline-block;
+}
+
+#console-img-container::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: blue;
+    opacity: 12%;
+    mix-blend-mode: overlay;
+    pointer-events: none;
+    transform: perspective(75em) rotateX(10deg);
+    transition: transform 0.25s ease-out;
+    transform-origin: top;
+}
+
+#console-img-container::before {
+    content: '';
+    position: absolute;
+    inset: -50px;
+    background: radial-gradient(circle, rgb(57, 57, 255), transparent 60%);
+    filter: blur(100px);
+    z-index: 0;
+}
+
 #console-img-container > img {
     transform: perspective(75em) rotateX(10deg);
     transition: transform 0.25s ease-out;
     transform-origin: top;
 }
 
-@media screen and (min-width: 992px) {
-    .feature-subtitle {
-        width: 30%;
-    }
-
-    .header {
-        max-width: 960px!important;
-    }
-
-    .header-text {
-        font-size: 4rem;
-    }
+#spypet-img-container {
+    position: relative;
+    display: inline-block;
 }
 
-@media screen and (max-width: 1250px) {
-    .feature-subtitle {
-        width: 50%;
-    }
+#spypet-img-container::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: blue;
+    opacity: 12%;
+    mix-blend-mode: overlay;
+    pointer-events: none;
+    z-index: 2;
 }
 
-@media screen and (max-width: 992px) {
-    #header-content {
-        text-align: center;
-    }
-
-    #header-subtitle {
-        margin: 0 auto;
-        width: 60%;
-    }
-
-    #about-picture {
-        display: none;
-    }
+#spypet-img-container::before {
+    content: '';
+    position: absolute;
+    inset: -50px;
+    background: radial-gradient(circle, rgb(57, 57, 255), transparent 60%);
+    filter: blur(100px);
+    z-index: 0;
 }
 
-@media screen and (max-width: 768px) {
-    .feature-subtitle {
-        width: 70%;
-    }
-
-    /* #console-img-container {
-        display: none;
-    } */
-
-    #header-content {
-        padding-top: 2rem;
-    }
-
-    #header-subtitle {
-        width: 80%;
-    }
-
-    .header {
-        padding: 5rem 0;
-    }
-
-    #console-img-container > img {
-        transform: none;
-    }
+#spypet-img-container > img {
+    position: relative;
+    z-index: 1;
+    filter: blur(2px);
 }
 
-@media screen and (max-width: 576px) {
-    .feature-subtitle {
-        width: 80%;
-    }
-
-    #header-subtitle {
-        width: 90%;
-    }
+.features {
+    margin-top: 15rem;
+    margin-bottom: 12rem;
 }
 
-@media screen and (max-width: 400px) {
-    .feature-subtitle {
-        width: 90%;
-    }
+.card {
+    background-color: #0c0c0c!important;
+    border: none;
+    border-radius: 1rem;
+    box-shadow: 0px 2px 15px black;
+}
 
-    #header-subtitle {
-        width: 100%;
-    }
-    
+.custom-container {
+    max-width: 1000px!important;
+}
+
+.card-text, p {
+    color: #d5d5d5!important;
+}
+
+.terminal {
+    background-color: #131313;
+    border: 1px solid #292929;
+    border-radius: 5px;
+    padding: 1rem;
+}
+
+.terminal p {
+    margin: 0;
+    font-family: monospace!important;
+    color: #eaeaea!important;
+}
+
+.terminal-comment {
+    color: #5c5c5c;
+    font-style: italic;
+}
+
+.footer {
+    background-color: #06080c;
+    border-top: 2px solid rgba(27, 24, 84, 0.678);
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #1a1d1f;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #433dfb;
+    border-radius: 4px;
 }
