--- a/assets/style.css
+++ b/assets/style.css
@@ -194,3 +194,66 @@ p, h1, h2, h3, h4, h5, h6, a, button, .btn {
     background: #433dfb;
     border-radius: 4px;
 }
+
+@media (max-width: 1200px) {
+    .custom-container {
+        max-width: 90%!important;
+    }
+}
+
+/* add responsiveness */
+@media (max-width: 768px) {
+    .header {
+        height: auto;
+        padding: 3rem 0;
+    }
+
+    .header-text {
+        font-size: 2.5rem;
+    }
+
+    #header-subtitle {
+        width: 90%;
+    }
+
+    .features {
+        margin-top: 8rem;
+        margin-bottom: 8rem;
+    }
+
+    .custom-container {
+        max-width: 90%!important;
+    }
+
+    #console-img-container > img {
+        transform: none;
+        position: relative;
+        z-index: 1;
+    }
+
+    #console-img-container::after {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background: blue;
+        opacity: 12%;
+        mix-blend-mode: overlay;
+        pointer-events: none;
+        z-index: 2;
+        transform: none;
+    }
+
+    .navbar > .custom-container {
+        max-width: 100%!important;
+    }
+}
+
+@media (max-width: 600px) {
+    #console-img-container {
+        max-width: 90%;
+    }
+
+    .header-text {
+        font-size: 2rem;
+    }
+}
