Add scroll to terminal when its too small

--- a/assets/style.css
+++ b/assets/style.css
@@ -255,4 +255,8 @@ p, h1, h2, h3, h4, h5, h6, a, button, .btn {
     .header-text {
         font-size: 2rem;
     }
+
+    .terminal {
+        overflow-x: scroll;
+    }
 }
